--- a/BlazorApp3/Pages/Index.razor
+++ b/BlazorApp3/Pages/Index.razor
@@ -64,7 +64,7 @@
         Http = new HttpClient();
         messages.Add(message);
 
-        var apiKey = " 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";
+        var apiKey = "enter your openAI api key here ";
         Http.DefaultRequestHeaders.Add("Authorization", $"Bearer {apiKey}");
 
         var jsonContent = new
